# IHMS-OMS

./: .env.example  .gitignore  AGENTS.md  AI-USAGE.md  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.cursor/rules/: 01-workflow.mdc  02-architecture.mdc  03-quality.mdc  04-documentation.mdc  05-upstream-evolution.mdc  06-docker-dev.mdc
.github/: labels.json  pull_request_template.md
.github/workflows/: ci.yml  (+2 more)
catalog/: ecops-mapping.json  ihms-products.json  products.json
docker/: Dockerfile.orchestrator  compose.base.yml  compose.bundle.yml  compose.dev.yml  compose.full.yml  compose.observability.yml  compose.upstream.yml
docs/: ARCHITECTURE.md  DECISION-MATRIX.md  DESIGN-DECISIONS.md  DOCKER.md  EC-OPS-UPSTREAM.md  FAILURE-SCENARIOS.md  IHMS-UPSTREAM.md  OBSERVABILITY.md  PERFORMANCE.md  PROJECT-WORKFLOW.md  WORKFLOWS.md  index.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: deploy-stack.sh  dev-up.cmd  dev-up.ps1  dev-up.sh  e2e-stack.sh  ecops-token.cmd  ecops-token.ps1  ecops-token.sh  full-stack.cmd  full-stack.ps1  full-stack.sh  health-check.ps1  health-check.sh  mock-stack.cmd  mock-stack.ps1  mock-stack.sh  obs-stack.sh  obs-up.ps1  real-upstream.cmd  real-upstream.ps1  real-upstream.sh  refresh-ecops-token.ps1  refresh-ecops-token.sh  start-upstreams.ps1  start-upstreams.sh  stop-stack.cmd  stop-stack.ps1  upstream-stack.sh  verify.sh
src/: __init__.py  main.py  settings.py
tests/: conftest.py
(+112 files in other folders)
